2009-02-13  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* Gtk2.pm
	* NEWS
	* README: Unstable release 1.211.

2009-02-13  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* Makefile.PL: Require Glib 1.212 for the precompiled headers
	stuff.  Print the stability warning.

2009-02-13  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* gtk2perl.h: Remove the definitions for the custom pango GTypes.
	They now come from pango-perl.h.

2009-02-13  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* xs/GtkIconView.xs: Fix stack handling bugs in
	Gtk2::IconView::get_item_at_pos(), get_dest_item_at_pos(), and
	get_tooltip_context().  Patch by Kevin Ryde.

2009-02-13  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* xs/GtkBindings.xs (gtk2perl_binding_set_get_type): To make the
	doc generator happy, register our custom GtkBindingSet GType under
	the name "GtkBindingSet".

2009-02-11  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* constants-2.0
	* gtk2perl.h
	* Gtk2.pm
	* MANIFEST
	* maps-2.0
	* xs_files-2.0
	* t/GtkBindings.t
	* xs/GtkBindings.xs: Wrap the GtkBindings stuff.  Patch by
	Kevin Ryde.

2009-02-06  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* MANIFEST
	* maps-2.16
	* xs_files-2.16
	* t/GtkOrientable.t
	* xs/GtkOrientable.xs: Wrap the new GtkOrientable interface.  No
	support for implementing it in Perl subclasses yet.  Patch by
	Emmanuel Rodriguez.

2009-02-06  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* t/GtkEntry.t: Test Gtk2::Entry->get_icon_storage_type.

2009-02-06  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* t/GtkEntry.t
	* xs/GtkEntry.xs: Track the recent upstream function renaming:
	gtk_entry_get_pixbuf → gtk_entry_get_icon_pixbuf,
	gtk_entry_get_stock → gtk_entry_get_icon_stock, and
	gtk_entry_get_storage_type → gtk_entry_get_icon_storage_type.

2009-02-06  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* xs/GdkX11.xs: Call the atom arg for
	Gtk2::Gdk::Atom->to_xatom_for_display "atom" for clarity in the
	generated POD.  Patch by Kevin Ryde.
