@@ -572,3 +572,84 @@ gtk_style_lookup_color (GtkStyle *style, const gchar *color_name)
         RETVAL
 
 #endif
+
+#if GTK_CHECK_VERSION (2, 15, 0) /* FIXME 2.16 */
+
+=for apidoc Gtk2::Style::get
+=for signature $style->get (widget_package, ...)
+=for signature $style->get_property (widget_package, ...)
+=for arg widget_package (string) widget package name (ex: 'Gtk2::TreeView')
+=for arg ... (list) list of property names
+
+Fetch and return the values for the style properties named in I<...> for a
+widget of type I<widget_package>.
+
+I<get_property> is an alias for I<get>.
+
+B<Note>: These methods shadow I<Glib::Object::get> and
+I<Glib::Object::get_property>. This shouldn't be a problem since I<Gtk2::Style>
+defines no properties (as of gtk+ 2.16).  If you have a class that's derived
+from Gtk2::Style and adds a property or if a new version of gtk+ adds a
+property to I<Gtk2::Style>, the property can be accessed by fully qualifying
+the method name:
+
+	my $value = $style->Glib::Object::get('property');
+
+=cut
+
+=for apidoc Gtk2::Style::get_property __hide__
+=cut
+
+void
+gtk_style_get (style, widget_package, ...)
+    GtkStyle	*style
+    const char	*widget_package
+    ALIAS:
+	Gtk2::Style::get = 0
+	Gtk2::Style::get_property = 1
+    PREINIT:
+	int i;
+	GType widget_type;
+	gpointer class;
+    CODE:
+	/* Use CODE: instead of PPCODE: so we can handle the stack ourselves in
+	 * order to avoid that xsubs called by gtk_style_get_property overwrite
+	 * what we put on the stack. */
+	PERL_UNUSED_VAR (ix);
+
+	widget_type = gperl_type_from_package (widget_package);
+	if (widget_type == 0)
+		croak ("package %s is not registered with GPerl", widget_package);
+
+	if (! g_type_is_a (widget_type, GTK_TYPE_WIDGET))
+		croak ("%s is not a subclass of Gtk2::Widget", widget_package);
+
+
+	class = g_type_class_ref (widget_type);
+	if (class == NULL)
+		croak ("can't find type class for type %s", widget_package);
+
+	for (i = 2 ; i < items ; i++) {
+		GValue value = {0, };
+		gchar *name = SvGChar (ST (i));
+		GParamSpec *pspec =
+			gtk_widget_class_find_style_property (class, name);
+
+		if (pspec) {
+			g_value_init (&value, G_PARAM_SPEC_VALUE_TYPE (pspec));
+			gtk_style_get_property (style, widget_type, name, &value);
+			ST (i - 2) = sv_2mortal (gperl_sv_from_value (&value));
+			g_value_unset (&value);
+		}
+		else {
+			g_type_class_unref (class);
+			croak ("type %s does not support style property '%s'",
+			       widget_package, name);
+		}
+	}
+
+	g_type_class_unref (class);
+
+	XSRETURN (items - 2);
+
+#endif
